--- a/app/components/LandingPage/index.module.scss
+++ b/app/components/LandingPage/index.module.scss
@@ -1,4 +1,202 @@
 @import "../../../styles/index.scss";
 
 .container {
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  position: relative;
+ 
+  .hero-section{
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    width: inherit;
+    min-height: 100vh;
+    padding: 25px 90px;
+    position: relative;
+    background-image: url("https://res.cloudinary.com/dlinprg6k/image/upload/v1715569069/image_1_o6pdvf.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .desktop-header{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      min-height: 95px;
+      background: #1D1B1E;
+      border: 1px solid #262626;
+      border-radius: 100px;
+      padding: 20px 34px;
+      // position: fixed;
+      // width: 87%;
+
+      .logo{
+        color: #fff;
+        font-family: "Space Grotesk";
+        font-size: 28px;
+        font-weight: 500;
+        line-height: 36px;
+      }
+      .tabs{
+        display: flex;
+        align-items: center;
+        gap: 26px;
+        
+        .tab, .tab-active{
+          font-family: "Lexend";
+          font-size: 18px;
+          font-weight: 400;
+          line-height: 27px;
+          color: #fff;
+        }
+        .tab-active{
+          background: #3D3A3E;
+          padding: 12px 24px;
+          border-radius: 82px;
+        }
+      }
+      .buttons{
+        display: flex;
+        gap: 30px;
+        align-items: center;
+
+        .signup, .login{
+          font-family: "Lexend";
+          font-size: 18px;
+          font-weight: 400;
+          line-height: 27px;
+          color: #fff;
+        }
+        .login{
+          border-radius: 82px;
+          background: #653F97;
+          padding: 14px 30px;
+        }
+      }
+    }
+    .inner-hero{
+      display: flex;
+      gap: 20px;
+
+      .left-container{
+        display: flex;
+        flex-direction: column;
+        width: 51%;
+        min-height: 454px;
+        gap: 50px;
+
+        .inner{
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          min-height: 334px;
+
+          .tag{
+            display: flex;
+            gap: 6px;
+            background: #F8EDFF;
+            width: 67%;
+            border-radius: 61px;
+            padding: 10px 12px 10px 12px;
+            color: #290055;
+            font-family: "Lexend";
+            font-size: 18px;
+            font-weight: 300;
+            line-height: 24px;
+
+          }
+          .heading-text{
+            font-family:"Space Grotesk";
+            font-size: 48px;
+            font-weight: 700;
+            line-height: 64px;
+            letter-spacing: -0.25px;
+            color: #1D1B1E;
+
+            span{
+              color: #653F97;
+            }
+          }
+          .body-text{
+            font-family: "Avenir";
+            font-size: 18px;
+            font-weight: 350;
+            line-height: 32px;
+            color: #e4dede;
+          }
+
+        }
+        .btn-container{
+          display: flex;
+          gap: 20px;
+          min-height: 70px;
+          align-items: center;
+
+          .btn-get-started, .btn-learn-more{
+            background: linear-gradient(90deg, #714BA4 0%, #965DE2 100%);
+            border-radius: 10px;
+            padding: 18px 20px;
+            color: #fff;
+            font-family: "Space Grotesk";
+            font-size: 22px;
+            font-weight: 700;
+            line-height: 28px;
+            text-align: center;
+            cursor: pointer;
+            text-transform: capitalize;
+            width: 250px;
+          }
+          .btn-learn-more{
+            background: var(--stroke, #EAECF0)!important;
+            color: #615D61!important;
+          }
+        }
+      }
+      .right-container{
+        display: flex;
+        flex-direction: column;
+        width: 48%;
+        min-height: 697px;
+        position: relative;
+
+        img{
+          height: 90%;
+          width: 90%;
+          position: absolute;
+          right: -10px;
+          top: 0;
+        }
+        .txn-container{
+          display: flex;
+          gap: 26px;
+          flex-direction: column;
+          min-height: 294px;
+          padding: 34px;
+          width: 515px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          border-radius: 10.4px;
+          background: #F6FEFF;
+          border: 1px solid #262626;
+
+          .title{
+            font-family: "Lexend";
+            font-size: 17.34px;
+            font-weight: 500;
+            line-height: 26.01px;
+            color: #714BA4;
+          }
+        }
+      }
+    }
+    
+  
+  }
+  .partners{
+    display: flex;
+    gap: 12px;
+    min-height: 250px;
+  }
 }
