signUp and Login

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+
+.gradient-text {
+    background: linear-gradient(to bottom, #E5EFFF, #FFFFFF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 4em;
+  }
+  
+  
